# mars-attacks

./: .gitignore  Dockerfile  README.md  config.ini  docker-compose.yml  pyproject.toml  pytest.ini
mars_attacks/entrypoints/: __main__.py  containers.py
mars_attacks/foundation/: file_storage.py
mars_attacks/resources/invaders/: invader1.txt  invader2.txt
mars_attacks/resources/radar_scans/: scan-1.txt
mars_attacks/tracking/adapters/repositories/: invaders.py  radar_scan.py
mars_attacks/tracking/domain/: value_objects.py
mars_attacks/tracking/domain/entities/: invader.py  radar_scan.py
mars_attacks/tracking/renderers/: base.py  renderers.py
mars_attacks/tracking/trackers/: base.py  np_tracker.py
mars_attacks/tracking/use_cases/: invaders_tracking.py
tests/: test_renderer.py  test_repositories.py  test_tracker.py  test_tracking_uc.py
